#summary ChangeLog for fookebox
#labels Featured,Phase-Deploy

== 0.1.1 ==

 * Made the right part scrollable without scrolling the whole window (fixes #1)
 * Made sure all clients are informed on playlist updates (fixes #2)
 * Updated smarty to version 2.6.19
 * Minor documentation updates